Replace replacetokens task with shell script in pipeline
Swapped out the replacetokens@5 task for a shell script using sed to replace tokens in manifest files. This simplifies the pipeline and removes dependency on the replacetokens extension.

--- a/azure-pipelines-iac-tf-eks.yml
+++ b/azure-pipelines-iac-tf-eks.yml
@@ -122,7 +122,6 @@ stages:
     displayName: 'Deploy Flask App to EKS'
     pool:
       vmImage: ubuntu-latest
-    environment: 'production'
     strategy:
       runOnce:
         deploy:
@@ -168,24 +167,10 @@ stages:
             env:
               AWS_DEFAULT_REGION: $(awsRegion)
               
-          - task: replacetokens@5
+          - script: |
+              # Replace tokens in manifest files
+              find manifests/ -name "*.yaml" -exec sed -i "s|#{DOCKER_IMAGE_TAG}#|$(ecrRegistry)/$(imageRepository):$(tag)|g" {} \;
             displayName: 'Replace tokens in manifests'
-            inputs:
-              rootDirectory: 'manifests'
-              targetFiles: '**/*.yaml'
-              encoding: 'auto'
-              tokenPattern: 'custom'
-              tokenPrefix: '#{'
-              tokenSuffix: '}#'
-              writeBOM: true
-              actionOnMissing: 'warn'
-              keepToken: false
-              actionOnNoFiles: 'continue'
-              enableTransforms: false
-              useLegacyPattern: false
-              enableTelemetry: true
-              variables: |
-                DOCKER_IMAGE_TAG=$(ecrRegistry)/$(imageRepository):$(tag)
                 
           - task: Kubernetes@1
             displayName: 'Apply Service Account for ECR'
