--- a/azure-pipelines-iac-tf-eks.yml
+++ b/azure-pipelines-iac-tf-eks.yml
@@ -62,6 +62,14 @@ stages:
         command: 'apply'
         environmentServiceNameAWS: $(awsServiceConnection)
         
+    - script: |
+        # Get cluster name from Terraform output
+        CLUSTER_NAME=$(terraform output -raw cluster_name)
+        echo "##vso[task.setvariable variable=EKS_CLUSTER_NAME;isOutput=true]$CLUSTER_NAME"
+        echo "EKS Cluster Name: $CLUSTER_NAME"
+      displayName: 'Get Cluster Name from Terraform'
+      name: getClusterName
+        
     - task: AWSCLI@1
       displayName: 'Update Kubeconfig'
       inputs:
@@ -69,7 +77,7 @@ stages:
         regionName: $(awsRegion)
         awsCommand: 'eks'
         awsSubCommand: 'update-kubeconfig'
-        awsArguments: '--name education-eks-E5JUa2tE'
+        awsArguments: '--name $(getClusterName.EKS_CLUSTER_NAME)'
 
 - stage: Build
   displayName: 'Build and Push Docker Image'
@@ -117,6 +125,8 @@ stages:
   displayName: 'Deploy to EKS'
   dependsOn: Build
   condition: succeeded()
+  variables:
+    EKS_CLUSTER_NAME: $[ stageDependencies.Infrastructure.TerraformDeploy.outputs['getClusterName.EKS_CLUSTER_NAME'] ]
   jobs:
   - job: DeployToEKS
     displayName: 'Deploy Flask App to EKS'
@@ -126,6 +136,10 @@ stages:
     - checkout: self
       displayName: 'Checkout source code'
       
+    - script: |
+        echo "Using EKS Cluster Name: $(EKS_CLUSTER_NAME)"
+      displayName: 'Debug - Show Cluster Name'
+      
     - task: AWSCLI@1
       displayName: 'Update Kubeconfig for Deployment'
       inputs:
@@ -133,7 +147,7 @@ stages:
         regionName: $(awsRegion)
         awsCommand: 'eks'
         awsSubCommand: 'update-kubeconfig'
-        awsArguments: '--name education-eks-E5JUa2tE'
+        awsArguments: '--name $(EKS_CLUSTER_NAME)'
         
     - task: AWSCLI@1
       displayName: 'Setup ECR Secret for Kubernetes'
