--- a/azure-pipelines-iac-tf-eks.yml
+++ b/azure-pipelines-iac-tf-eks.yml
@@ -106,29 +106,18 @@ stages:
         ECR_TOKEN=$(aws ecr get-login-password --region $(awsRegion))
         echo $ECR_TOKEN | docker login --username AWS --password-stdin $(ecrRegistry)
         echo "Successfully logged into ECR: $(ecrRegistry)"
-      displayName: 'Login to Docker with ECR Token'
+        
+        # Build the Docker image
+        docker build -t $(ecrRegistry)/$(imageRepository):$(tag) -t $(ecrRegistry)/$(imageRepository):latest src/
+        
+        # Push both tags
+        docker push $(ecrRegistry)/$(imageRepository):$(tag)
+        docker push $(ecrRegistry)/$(imageRepository):latest
+        
+        echo "Successfully pushed images to ECR"
+      displayName: 'Login, Build and Push to ECR'
       env:
         AWS_DEFAULT_REGION: $(awsRegion)
-        
-    - task: Docker@2
-      displayName: 'Build Flask Docker Image'
-      inputs:
-        command: 'build'
-        repository: '$(ecrRegistry)/$(imageRepository)'
-        dockerfile: $(dockerfilePath)
-        buildContext: 'src'
-        tags: |
-          $(tag)
-          latest
-          
-    - task: Docker@2
-      displayName: 'Push to AWS ECR'
-      inputs:
-        command: 'push'
-        repository: '$(ecrRegistry)/$(imageRepository)'
-        tags: |
-          $(tag)
-          latest
 
 - stage: Deploy
   displayName: 'Deploy to EKS'
