Improve EKS cluster name retrieval in deploy stage
The Deploy stage now depends on both Infrastructure and Build stages. Added steps to install Terraform and initialize it if the EKS_CLUSTER_NAME variable is empty, retrieving the cluster name directly from Terraform output when needed. Enhanced debug output for better visibility of the cluster name source.

--- a/azure-pipelines-iac-tf-eks.yml
+++ b/azure-pipelines-iac-tf-eks.yml
@@ -121,7 +121,9 @@ stages:
 
 - stage: Deploy
   displayName: 'Deploy to EKS'
-  dependsOn: Build
+  dependsOn: 
+  - Infrastructure
+  - Build
   condition: succeeded()
   variables:
     EKS_CLUSTER_NAME: $[ stageDependencies.Infrastructure.TerraformDeploy.outputs['getClusterName.EKS_CLUSTER_NAME'] ]
@@ -134,9 +136,34 @@ stages:
     - checkout: self
       displayName: 'Checkout source code'
       
+    - task: TerraformInstaller@1
+      displayName: 'Install Terraform'
+      inputs:
+        terraformVersion: $(terraformVersion)
+      
+    - task: TerraformTask@5
+      displayName: 'Initialize Terraform for Outputs'
+      condition: eq(variables['EKS_CLUSTER_NAME'], '')
+      inputs:
+        provider: 'aws'
+        command: 'init'
+        backendServiceAWS: $(awsServiceConnection)
+        backendAWSBucketName: 'tf-state-file-4-az-pipeline-eks'
+        backendAWSKey: 'terraform.tfstate'
+        
     - script: |
-        echo "Using EKS Cluster Name: $(EKS_CLUSTER_NAME)"
-      displayName: 'Debug - Show Cluster Name'
+        echo "Debug: EKS_CLUSTER_NAME variable value: '$(EKS_CLUSTER_NAME)'"
+        
+        # If cluster name is empty, try to get it from Terraform output directly
+        if [ -z "$(EKS_CLUSTER_NAME)" ]; then
+          echo "EKS_CLUSTER_NAME is empty, getting from Terraform output..."
+          CLUSTER_NAME=$(terraform output -raw cluster_name)
+          echo "##vso[task.setvariable variable=EKS_CLUSTER_NAME]$CLUSTER_NAME"
+          echo "Retrieved cluster name from Terraform: $CLUSTER_NAME"
+        else
+          echo "Using EKS_CLUSTER_NAME from stage dependency: $(EKS_CLUSTER_NAME)"
+        fi
+      displayName: 'Debug and Get Cluster Name'
       
     - task: AWSCLI@1
       displayName: 'Update Kubeconfig for Deployment'
