--- a/azure-pipelines-iac-tf-eks.yml
+++ b/azure-pipelines-iac-tf-eks.yml
@@ -63,34 +63,13 @@ stages:
         environmentServiceNameAWS: $(awsServiceConnection)
         
     - script: |
-            - task: TerraformInstaller@1
-      displayName: 'Install Terraform for Deploy Stage'
-      inputs:
-        terraformVersion: $(terraformVersion)
-        
-    - task: TerraformTask@5
-      displayName: 'Terraform Init for Cluster Name'
-      inputs:
-        provider: 'aws'
-        command: 'init'
-        backendServiceAWS: $(awsServiceConnection)
-        backendAWSBucketName: 'tf-state-file-4-az-pipeline-eks'
-        backendAWSKey: 'terraform.tfstate'
-        
-    - script: |
         # Get cluster name from Terraform output
-        echo "=== Getting cluster name from Terraform output ==="
         CLUSTER_NAME=$(terraform output -raw cluster_name)
-        
-        if [ -n "$CLUSTER_NAME" ]; then
-          echo "Found cluster name: $CLUSTER_NAME"
-          echo "##vso[task.setvariable variable=EKS_CLUSTER_NAME]$CLUSTER_NAME"
-        else
-          echo "ERROR: Could not get cluster name from Terraform output"
-          exit 1
-        fi
+        echo "##vso[task.setvariable variable=EKS_CLUSTER_NAME;isOutput=true]$CLUSTER_NAME"
+        echo "EKS Cluster Name: $CLUSTER_NAME"
       displayName: 'Get Cluster Name from Terraform'
-      
+      name: getClusterName
+        
     - task: AWSCLI@1
       displayName: 'Update Kubeconfig'
       inputs:
@@ -98,13 +77,7 @@ stages:
         regionName: $(awsRegion)
         awsCommand: 'eks'
         awsSubCommand: 'update-kubeconfig'
-        awsArguments: '--name $(EKS_CLUSTER_NAME)'
-        
-    - script: |
-        echo "Testing cluster connectivity..."
-        kubectl cluster-info || echo "Warning: Cluster info failed"
-        kubectl get nodes --timeout=30s || echo "Warning: Cannot get nodes yet"
-      displayName: 'Test Kubernetes Connectivity'
+        awsArguments: '--name $(getClusterName.EKS_CLUSTER_NAME)'
 
 - stage: Build
   displayName: 'Build and Push Docker Image'
@@ -118,6 +91,23 @@ stages:
     steps:
     - checkout: self
       displayName: 'Checkout source code'
+      
+    - script: |
+        # ECR Login, Build and Push combined
+        echo "=== Logging into ECR ==="
+        aws ecr get-login-password --region $(awsRegion) | docker login --username AWS --password-stdin $(ecrRegistry)
+        
+        echo "=== Building Docker image ==="
+        docker build -t $(ecrRegistry)/$(imageRepository):$(tag) -t $(ecrRegistry)/$(imageRepository):latest -f $(dockerfilePath) src/
+        
+        echo "=== Pushing to ECR ==="
+        docker push $(ecrRegistry)/$(imageRepository):$(tag)
+        docker push $(ecrRegistry)/$(imageRepository):latest
+        
+        echo "Successfully built and pushed: $(ecrRegistry)/$(imageRepository):$(tag)"
+      displayName: 'ECR Login, Build and Push Docker Image'
+      env:
+        AWS_DEFAULT_REGION: $(awsRegion)
       
     - task: AWSCLI@1
       displayName: 'Get ECR Login Token'
