--- a/azure-pipelines-iac-tf-eks.yml
+++ b/azure-pipelines-iac-tf-eks.yml
@@ -188,6 +188,10 @@ stages:
         echo "##vso[task.setvariable variable=CLUSTER_NAME]$CLUSTER_NAME"
         
       displayName: 'Get Cluster Name from Terraform'
+      env:
+        AWS_ACCESS_KEY_ID: $(AWS_ACCESS_KEY_ID)
+        AWS_SECRET_ACCESS_KEY: $(AWS_SECRET_ACCESS_KEY)
+        AWS_DEFAULT_REGION: $(awsRegion)
         
     - task: AWSCLI@1
       displayName: 'Update Kubeconfig with Dynamic Cluster Name'
@@ -203,8 +207,12 @@ stages:
         echo "Testing kubectl connectivity..."
         kubectl cluster-info
         echo "Getting cluster nodes..."
-        kubectl get nodes --timeout=30s || echo "Warning: Could not get nodes, but continuing..."
+        kubectl get nodes --request-timeout=30s || echo "Warning: Could not get nodes, but continuing..."
       displayName: 'Verify Kubernetes Connectivity'
+      env:
+        AWS_ACCESS_KEY_ID: $(AWS_ACCESS_KEY_ID)
+        AWS_SECRET_ACCESS_KEY: $(AWS_SECRET_ACCESS_KEY)
+        AWS_DEFAULT_REGION: $(awsRegion)
         
     - task: AWSCLI@1
       displayName: 'Setup ECR Secret for Kubernetes'
@@ -233,6 +241,8 @@ stages:
           --namespace=default || echo "Service account patch skipped"
       displayName: 'Create ECR Registry Secret'
       env:
+        AWS_ACCESS_KEY_ID: $(AWS_ACCESS_KEY_ID)
+        AWS_SECRET_ACCESS_KEY: $(AWS_SECRET_ACCESS_KEY)
         AWS_DEFAULT_REGION: $(awsRegion)
         
     - script: |
