Add imagePullSecrets to service account manifest
Added imagePullSecrets referencing ecr-registry-secret to the service account for ECR access. Removed embedded RBAC Role, ClusterRole, RoleBinding, and ClusterRoleBinding definitions to streamline the manifest.

--- a/manifests/serviceaccount-ecr.yaml
+++ b/manifests/serviceaccount-ecr.yaml
@@ -6,6 +6,8 @@ metadata:
   annotations:
     eks.amazonaws.com/role-arn: arn:aws:iam::112779685052:role/eks-ecr-access-role # Replace with your IAM role ARN
 automountServiceAccountToken: true
+imagePullSecrets:
+- name: ecr-registry-secret
 ---
 apiVersion: v1
 kind: Secret
@@ -15,61 +17,3 @@ metadata:
   annotations:
     kubernetes.io/service-account.name: deploy-robot
 type: kubernetes.io/service-account-token
----
-kind: Role
-apiVersion: rbac.authorization.k8s.io/v1
-metadata:
-  name: deploy-robot-role
-  namespace: default
-rules:
-- apiGroups: ["apps"]
-  resources: ["deployments", "replicasets"]
-  verbs: ["create", "delete", "get", "list", "watch", "update", "patch"]
-- apiGroups: [""]
-  resources: ["pods", "services", "configmaps", "secrets", "serviceaccounts"]
-  verbs: ["create", "delete", "get", "list", "watch", "update", "patch"]
-- apiGroups: ["networking.k8s.io"]
-  resources: ["ingresses"]
-  verbs: ["create", "delete", "get", "list", "watch", "update", "patch"]
-- apiGroups: ["policy"]
-  resources: ["poddisruptionbudgets"]
-  verbs: ["create", "delete", "get", "list", "watch", "update", "patch"]
-- apiGroups: ["autoscaling"]
-  resources: ["horizontalpodautoscalers"]
-  verbs: ["create", "delete", "get", "list", "watch", "update", "patch"]
----
-kind: ClusterRole
-apiVersion: rbac.authorization.k8s.io/v1
-metadata:
-  name: deploy-robot-cluster-role
-rules:
-- apiGroups: [""]
-  resources: ["nodes"]
-  verbs: ["get", "list", "watch"]
----
-kind: RoleBinding
-apiVersion: rbac.authorization.k8s.io/v1
-metadata:
-  name: deploy-robot-rolebinding
-  namespace: default
-subjects:
-- kind: ServiceAccount
-  name: deploy-robot
-  namespace: default
-roleRef:
-  kind: Role
-  name: deploy-robot-role
-  apiGroup: rbac.authorization.k8s.io
----
-kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1
-metadata:
-  name: deploy-robot-cluster-rolebinding
-subjects:
-- kind: ServiceAccount
-  name: deploy-robot
-  namespace: default
-roleRef:
-  kind: ClusterRole
-  name: deploy-robot-cluster-role
-  apiGroup: rbac.authorization.k8s.io
